# beat-analyzer

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md  beat-analyzer.service  beat-counterplan.txt  build.sh  package.sh  show-structure.sh
config/: config.yaml
include/analysis/: beat_detection.h  beat_info.h  beat_tracker.h  btrack_wrapper.h  grid_calculator.h  simple_beat_detector.h  vu_meter.h
include/app/: beat_analyzer_app.h
include/audio/: audio_buffer.h  audio_types.h  jack_client.h
include/config/: config_loader.h  env_config.h
include/osc/: osc_messages.h  osc_receiver.h  osc_sender.h  pioneer_receiver.h
include/util/: logging.h
src/: main.cpp
src/analysis/: beat_detection.cpp  beat_tracker.cpp  grid_calculator.cpp  vu_meter.cpp
src/app/: beat_analyzer_app.cpp  beat_processing.cpp
src/audio/: audio_buffer.cpp  jack_client.cpp
src/config/: config_loader.cpp
src/osc/: osc_messages.cpp  osc_receiver.cpp  osc_sender.cpp  pioneer_receiver.cpp
src/util/: logging.cpp
tests/: CMakeLists.txt  audio_buffer_test.cpp  beat_detection_test.cpp
